force-app/main/default/unpackaged/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>HandsMen_Product__c</fullName>
        <label>HandsMen Product</label>
        <referenceTo>HandsMen_Product__c</referenceTo>
        <relationshipLabel>Inventorys</relationshipLabel>
        <relationshipName>Inventorys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stock_Quantity__c</fullName>
        <label>Stock Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Status__c</fullName>
        <formula>IF(Stock_Quantity__c &gt; 10, &quot;Available&quot;, &quot;Low Stock&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I -{0000}</displayFormat>
        <label>Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventorys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Stock_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>Stock_Quantity__c&lt;=0</errorConditionFormula>
        <errorMessage>The inventory count is never less than zero.</errorMessage>
    </validationRules>
</CustomObject>